--- a/publications/publications.html
+++ b/publications/publications.html
@@ -193,7 +193,7 @@
 	    <p> Patricia Chaffey, Ron Artstein, Kallirroi Georgila, Kimberly A. Pollard, Setareh Nasihati Gilani, David M. Krum, David Nelson, Kevin Huynh, Alesia Gainer, Seyed Hossein Alavi, Rhys Yahata, and David Traum.
             <a href="chaffey_hltcem19.pdf">
             Developing a Virtual Reality Wildfire Simulation to Analyze Human Communication and Interaction with a Robotic Swarm During Emergencies.</a>
-            In <em>Proceedings of the Workshop on Human Language Technologies in Crisis and Emergency Management (HLTCEM) - Co-located with the 9th Language & Technology Conference</em>, Poznan, Poland, 2019. 
+            In <em>Proceedings of the 9th Language & Technology Conference</em>, Poznan, Poland, 2019. 
 	    </p>  
 	    
 	    <p> Carla Gordon, Kallirroi Georgila, Hyungtak Choi, Jill Boberg, and David Traum.
