--- a/publications/publications.html
+++ b/publications/publications.html
@@ -199,7 +199,7 @@
 	    <p> Carla Gordon, Kallirroi Georgila, Hyungtak Choi, Jill Boberg, and David Traum.
             <a href="gordon_aixdial18.pdf">
             Evaluating Subjective Feedback for Internet of Things Dialogues.</a>
-            In <em>Proceedings of the 22nd Workshop on the Semantics and Pragmatics of Dialogue (SEMDIAL:AIXDIAL)</em>, pp. 64-72, Aix-en-Provence, France, 2018. 
+            In <em>Proceedings of the 22nd Workshop on the Semantics and Pragmatics of Dialogue (SemDial-AixDial)</em>, pp. 64-72, Aix-en-Provence, France, 2018. 
 	    </p>  
 	    
             <p> Ramesh Manuvinakurike, Sumanth Bharadwaj, and Kallirroi Georgila.
