--- a/publications/publications.html
+++ b/publications/publications.html
@@ -38,7 +38,7 @@
             Seitaro Shinagawa, Koichiro Yoshino, Seyed Hossein Alavi, Kallirroi Georgila, David Traum, Sakriani Sakti, and Satoshi Nakamura.
             <a href="shinagawa_access21.pdf">
 	    An Interactive Image Editing System using an Uncertainty-Based Confirmation Strategy.</a> 
-            <em> IEEE Access</em>, Vol. 8, pp. 98471-98480, 2020.
+            <em>IEEE Access</em>, Vol. 8, pp. 98471-98480, 2020.
             <a href="https://ieeexplore.ieee.org/document/9099288">
             Journal Link.</a>
             </p>
@@ -46,14 +46,14 @@
 	    <p>
             Kallirroi Georgila.
 	    Speech Synthesis: State-of-the-art and Challenges for the Future.  
-            Book chapter in the book <em> Social Signal Processing (edited by Judee K. Burgoon, Nadia Magnenat-Thalmann, Maja Pantic, and Alessandro Vinciarelli)</em>, Cambridge University Press, 2017 (this chapter was written in 2013). 
+            Book chapter in the book <em>Social Signal Processing (edited by Judee K. Burgoon, Nadia Magnenat-Thalmann, Maja Pantic, and Alessandro Vinciarelli)</em>, Cambridge University Press, 2017 (this chapter was written in 2013). 
             </p>
 
 	    <p>
             Elnaz Nouri, Kallirroi Georgila, and David Traum.
             <a href="nouri_aisociety17.pdf">
             Culture-Specific Models of Negotiation for Virtual Characters: Multi-Attribute Decision-Making Based on Culture-Specific Values.</a> 
-            <em> AI & Society, Special Issue on Culturally Motivated Virtual Characters</em>, 32(1):51-63, Springer, 2017 (first published online in 2014). 
+            <em>AI & Society, Special Issue on Culturally Motivated Virtual Characters</em>, 32(1):51-63, Springer, 2017 (first published online in 2014). 
             <a href="http://link.springer.com/article/10.1007/s00146-014-0570-7">
 	    Journal Link.</a>  
             </p>
@@ -62,7 +62,7 @@
             Takuya Hiraoka, Kallirroi Georgila, Elnaz Nouri, David Traum, and Satoshi Nakamura.	    
             <a href="hiraoka_tjsai16.pdf">
             Reinforcement Learning of Multi-Party Trading Dialog Policies.</a> 
-	    <em> Transactions of the Japanese Society for Artificial Intelligence</em>, Vol. 31, No. 4, 2016.
+	    <em>Transactions of the Japanese Society for Artificial Intelligence</em>, Vol. 31, No. 4, 2016.
             <a href="https://www.jstage.jst.go.jp/article/tjsai/31/4/31_B-FC1/_article">
 	    Journal Link.</a>  
 	    </p>
@@ -71,7 +71,7 @@
             Kallirroi Georgila, Maria Wolters, Johanna D. Moore, and Robert H. Logie.
             <a href="georgila_lre10.pdf">
             The MATCH Corpus: A Corpus of Older and Younger Users' Interactions with Spoken Dialogue Systems.</a> 
-            <em> Language Resources and Evaluation</em>, 44(3):221-261, Springer, 2010.
+            <em>Language Resources and Evaluation</em>, 44(3):221-261, Springer, 2010.
             <a href="https://link.springer.com/article/10.1007/s10579-010-9118-8">
 	    Journal Link.</a>  
             </p>
@@ -80,7 +80,7 @@
             Kallirroi Georgila, Oliver Lemon, James Henderson, and Johanna D. Moore.
             <a href="georgila_nle09.pdf">
             Automatic Annotation of Context and Speech Acts for Dialogue Corpora.</a> 
-            <em> Journal of Natural Language Engineering</em>, 15(3):315-353, Cambridge University Press, 2009.
+            <em>Journal of Natural Language Engineering</em>, 15(3):315-353, Cambridge University Press, 2009.
             <a href="https://www.cambridge.org/core/journals/natural-language-engineering/article/automatic-annotation-of-context-and-speech-acts-for-dialogue-corpora/012CD34F4A699B5345E87845FAA2C1AC">
 	    Journal Link.</a>  
             </p>
@@ -89,7 +89,7 @@
             Maria Wolters, Kallirroi Georgila, Johanna D. Moore, and Sarah E. MacPherson.
             <a href="wolters_taccess09.pdf">
             Being Old Doesn't Mean Acting Old: How Older Users Interact with Spoken Dialog Systems.</a>
-            <em> ACM Transactions on Accessible Computing (TACCESS)</em>, Volume 2, Issue 1, Article No. 2, May 2009.
+            <em>ACM Transactions on Accessible Computing (TACCESS)</em>, Volume 2, Issue 1, Article No. 2, May 2009.
             <a href="http://dl.acm.org/citation.cfm?id=1525842">
 	    Journal Link.</a>  
             </p>
@@ -98,7 +98,7 @@
             Maria Wolters, Kallirroi Georgila, Johanna D. Moore, Robert H. Logie, Sarah E. MacPherson, and Matthew Watson.
             <a href="wolters_iwc09.pdf">
             Reducing Working Memory Load in Spoken Dialogue Systems.</a>
-            <em> Interacting with Computers</em>, 21(4):276-287, Elsevier, 2009.
+            <em>Interacting with Computers</em>, 21(4):276-287, Elsevier, 2009.
             <a href="https://academic.oup.com/iwc/article/21/4/276/717602">
 	    Journal Link.</a>  
             </p>
@@ -107,7 +107,7 @@
             James Henderson, Oliver Lemon, and Kallirroi Georgila.
             <a href="henderson_cl08.pdf">
             Hybrid Reinforcement/Supervised Learning of Dialogue Policies from Fixed Datasets.</a> 
-            <em> Computational Linguistics</em>, 34(4):487-511, MIT Press, 2008.
+            <em>Computational Linguistics</em>, 34(4):487-511, MIT Press, 2008.
             <a href="https://direct.mit.edu/coli/article/34/4/487/1997/Hybrid-Reinforcement-Supervised-Learning-of">
 	    Journal Link.</a>  
             </p>
@@ -116,7 +116,7 @@
             Kallirroi Georgila, Kyriakos Sgarbas, Anastasios Tsopanoglou, Nikos Fakotakis, and George Kokkinakis. 
             <a href="georgila_ijst03.pdf">
             A Speech-Based Human-Computer Interaction System for Automating Directory Assistance Services.</a> 
-            <em> International Journal of Speech Technology, Special Issue on Speech and Human Computer Interaction</em>, Vol. 6, No. 2, pp. 145-159, April 2003.
+            <em>International Journal of Speech Technology, Special Issue on Speech and Human Computer Interaction</em>, Vol. 6, No. 2, pp. 145-159, April 2003.
 	    <a href="https://link.springer.com/article/10.1023/A:1022338631326">
 	    Journal Link.</a?  
             </p>
@@ -125,7 +125,7 @@
             Kallirroi Georgila, Nikos Fakotakis, and George Kokkinakis. 
             <a href="georgila_ijst02.pdf">
             Large Vocabulary Search Space Reduction Employing Directed Acyclic Word Graphs and Phonological Rules.</a> 
-            <em> International Journal of Speech Technology</em>, Vol. 5, No. 4, pp. 355-370, November 2002.
+            <em>International Journal of Speech Technology</em>, Vol. 5, No. 4, pp. 355-370, November 2002.
 	    <a href="https://link.springer.com/article/10.1023/A%3A1020965126094">
 	    Journal Link.</a>  
             </p>
@@ -134,7 +134,7 @@
             Kallirroi Georgila, Nikos Fakotakis, and George Kokkinakis. 
             <a href="georgila_tal02.pdf">
             Stochastic Language Modelling for Recognition and Generation in Dialogue Systems.</a> 
-            <em> TAL (Traitement automatique des langues) journal</em>, Vol. 43(3), pp. 129-154, 2002.
+            <em>TAL (Traitement automatique des langues) journal</em>, Vol. 43(3), pp. 129-154, 2002.
             </p>
 
             <br>
@@ -223,7 +223,7 @@
             <p> Ramesh Manuvinakurike, Trung Bui, Walter Chang, and Kallirroi Georgila.
             <a href="manuvinakurike_sigdial18.pdf">
             Conversational Image Editing: Incremental Intent Identification in a New Dialogue Task.</a>
-            In <em>Proceedings of the 19th Annual SIGdial Meeting on Discourse and Dialogue</em>, pp. 284-295, Melbourne, Australia, 2018. <b>****best paper award****</b> 
+            In <em>Proceedings of the 19th Annual SIGdial Meeting on Discourse and Dialogue (SIGDIAL)</em>, pp. 284-295, Melbourne, Australia, 2018. <b>****best paper award****</b> 
             </p>
 
 	    <p>
@@ -255,7 +255,7 @@
             Ramesh Manuvinakurike, David DeVault, and Kallirroi Georgila.
             <a href="manuvinakurike_sigdial17.pdf">
             Using Reinforcement Learning to Model Incrementality in a Fast-Paced Dialogue Game.</a>
-            In <em>Proceedings of the 18th Annual SIGdial Meeting on Discourse and Dialogue</em>, pp. 331-341, Saarbruecken, Germany, 2017.
+            In <em>Proceedings of the 18th Annual SIGdial Meeting on Discourse and Dialogue (SIGDIAL)</em>, pp. 331-341, Saarbruecken, Germany, 2017.
             </p>
 	    
             <p>
@@ -304,28 +304,28 @@
             David Traum, Kallirroi Georgila, Ron Artstein, and Anton Leuski.
             <a href="traum_sigdial15.pdf">
             Evaluating Spoken Dialogue Processing for Time-Offset Interaction.</a>
-            In <em>Proceedings of the 16th Annual SIGdial Meeting on Discourse and Dialogue</em>, pp. 199-208, Prague, Czech Republic, 2015. <b>****best paper award****</b> 
+            In <em>Proceedings of the 16th Annual SIGdial Meeting on Discourse and Dialogue (SIGDIAL)</em>, pp. 199-208, Prague, Czech Republic, 2015. <b>****best paper award****</b> 
             </p>
 
             <p>
             Takuya Hiraoka, Kallirroi Georgila, Elnaz Nouri, David Traum, and Satoshi Nakamura.
             <a href="hiraoka_sigdial15.pdf">
             Reinforcement Learning in Multi-Party Trading Dialog.</a>
-            In <em>Proceedings of the 16th Annual SIGdial Meeting on Discourse and Dialogue</em>, pp. 32-41, Prague, Czech Republic, 2015.
+            In <em>Proceedings of the 16th Annual SIGdial Meeting on Discourse and Dialogue (SIGDIAL)</em>, pp. 32-41, Prague, Czech Republic, 2015.
             </p>
 
             <p>
             Alexandros Papangelis and Kallirroi Georgila.
             <a href="papangelis_sigdial15.pdf">
             Reinforcement Learning of Multi-Issue Negotiation Dialogue Policies.</a>
-            In <em>Proceedings of the 16th Annual SIGdial Meeting on Discourse and Dialogue</em>, pp. 154-158, Prague, Czech Republic, 2015.
+            In <em>Proceedings of the 16th Annual SIGdial Meeting on Discourse and Dialogue (SIGDIAL)</em>, pp. 154-158, Prague, Czech Republic, 2015.
             </p>
 
             <p>
             Eli Pincus, Kallirroi Georgila, and David Traum.
             <a href="pincus_sigdial15.pdf">
             Which Synthetic Voice Should I Choose for an Evocative Task?</a>
-            In <em>Proceedings of the 16th Annual SIGdial Meeting on Discourse and Dialogue</em>, pp. 105-113, Prague, Czech Republic, 2015.
+            In <em>Proceedings of the 16th Annual SIGdial Meeting on Discourse and Dialogue (SIGDIAL)</em>, pp. 105-113, Prague, Czech Republic, 2015.
             </p>
 
             <p> 
@@ -346,7 +346,7 @@
             Fabrizio Morbini, David DeVault, Kallirroi Georgila, Ron Artstein, David Traum, and Louis-Philippe Morency.
             <a href="morbini_sigdial14.pdf">
             A Demonstration of Dialogue Processing in SimSensei Kiosk.</a>
-            In <em>Proceedings of the 15th Annual SIGdial Meeting on Discourse and Dialogue</em>, pp. 254-256, Philadelphia, Pennsylvania, USA, 2014. 
+            In <em>Proceedings of the 15th Annual SIGdial Meeting on Discourse and Dialogue (SIGDIAL)</em>, pp. 254-256, Philadelphia, Pennsylvania, USA, 2014. 
             </p>
 
             <p> 
@@ -367,14 +367,14 @@
             Kallirroi Georgila.
             <a href="georgila_sigdial13.pdf">
             Reinforcement Learning of Two-Issue Negotiation Dialogue Policies.</a>
-            In <em>Proceedings of the 14th Annual SIGdial Meeting on Discourse and Dialogue</em>, pp. 112-116, Metz, France, 2013. 
+            In <em>Proceedings of the 14th Annual SIGdial Meeting on Discourse and Dialogue (SIGDIAL)</em>, pp. 112-116, Metz, France, 2013. 
             </p>
 
             <p>
             David DeVault, Kallirroi Georgila, Ron Artstein, Fabrizio Morbini, David Traum, Stefan Scherer, Albert (Skip) Rizzo, and Louis-Philippe Morency. 
             <a href="devault_sigdial13.pdf">
             Verbal Indicators of Psychological Distress in Interactive Dialogue with a Virtual Human.</a>
-            In <em>Proceedings of the 14th Annual SIGdial Meeting on Discourse and Dialogue</em>, pp. 193-202, Metz, France, 2013. <b>****best paper nomination****</b> 
+            In <em>Proceedings of the 14th Annual SIGdial Meeting on Discourse and Dialogue (SIGDIAL)</em>, pp. 193-202, Metz, France, 2013. <b>****best paper nomination****</b> 
             </p>
 
             <p>
@@ -388,7 +388,7 @@
             Teruhisa Misu, Kallirroi Georgila, Anton Leuski, and David Traum. 
             <a href="misu_sigdial12.pdf">
             Reinforcement Learning of Question-Answering Dialogue Policies for Virtual Museum Guides.</a> 
-            In <em>Proceedings of the 13th Annual SIGdial Meeting on Discourse and Dialogue</em>, pp. 84-93, Seoul, South Korea, 2012. 
+            In <em>Proceedings of the 13th Annual SIGdial Meeting on Discourse and Dialogue (SIGDIAL)</em>, pp. 84-93, Seoul, South Korea, 2012. 
             </p>
 
             <p>
@@ -423,7 +423,7 @@
             Kallirroi Georgila, Ron Artstein, Angela Nazarian, Michael Rushforth, David Traum, and Katia Sycara. 
             <a href="georgila_sigdial11.pdf">
             An Annotation Scheme for Cross-Cultural Argumentation and Persuasion Dialogues.</a> 
-            In <em>Proceedings of the 12th Annual SIGdial Meeting on Discourse and Dialogue</em>, pp. 272-278, Portland, Oregon, USA, 2011. 
+            In <em>Proceedings of the 12th Annual SIGdial Meeting on Discourse and Dialogue (SIGDIAL)</em>, pp. 272-278, Portland, Oregon, USA, 2011. 
             </p>
 
             <p>
@@ -444,14 +444,14 @@
             Kallirroi Georgila, Ning Wang, and Jonathan Gratch. 
             <a href="georgila_sigdial10b.pdf">
             Cross-Domain Speech Disfluency Detection.</a> 
-            In <em>Proceedings of the 11th Annual SIGdial Meeting on Discourse and Dialogue</em>, pp. 237-240, Tokyo, Japan, 2010. 
+            In <em>Proceedings of the 11th Annual SIGdial Meeting on Discourse and Dialogue (SIGDIAL)</em>, pp. 237-240, Tokyo, Japan, 2010. 
             </p>
 
             <p>
             Kallirroi Georgila, Maria K. Wolters, and Johanna D. Moore. 
             <a href="georgila_sigdial10a.pdf">
             Learning Dialogue Strategies from Older and Younger Simulated Users.</a> 
-            In <em>Proceedings of the 11th Annual SIGdial Meeting on Discourse and Dialogue</em>, pp. 103-106, Tokyo, Japan, 2010. 
+            In <em>Proceedings of the 11th Annual SIGdial Meeting on Discourse and Dialogue (SIGDIAL)</em>, pp. 103-106, Tokyo, Japan, 2010. 
             </p>
 
             <p>
@@ -472,7 +472,7 @@
             Taghi Paksima, Kallirroi Georgila, and Johanna D. Moore. 
             <a href="paksima_sigdial09.pdf">
             Evaluating the Effectiveness of Information Presentation in a Full End-to-End Dialogue System.</a> 
-            In <em>Proceedings of the 10th Annual SIGdial Meeting on Discourse and Dialogue</em>, pp. 1-10, London, UK, 2009. <b>****best paper nomination****</b>
+            In <em>Proceedings of the 10th Annual SIGdial Meeting on Discourse and Dialogue (SIGDIAL)</em>, pp. 1-10, London, UK, 2009. <b>****best paper nomination****</b>
             </p>
 
             <p>
@@ -542,7 +542,7 @@
             Jost Schatzmann, Kallirroi Georgila, and Steve Young.
             <a href="schatzmann_sigdial05.pdf">
             Quantitative Evaluation of User Simulation Techniques for Spoken Dialogue Systems.</a> 
-            In <em>Proceedings of the 6th Annual SIGdial Meeting on Discourse and Dialogue</em>, pp. 45-54, Lisbon, Portugal, 2005.
+            In <em>Proceedings of the 6th Annual SIGdial Meeting on Discourse and Dialogue (SIGDIAL)</em>, pp. 45-54, Lisbon, Portugal, 2005.
             </p>
 
             <p>
