--- a/publications/publications.html
+++ b/publications/publications.html
@@ -414,7 +414,7 @@
 
             <p>
             Kallirroi Georgila and David Traum.
-            <a href="georgila_hci11.pdf">
+            <a href="georgila_hcii11.pdf">
             Learning Culture-Specific Dialogue Models from Non-Culture Specific Data.</a> 
             In <em>Proceedings of Universal Access in Human-Computer Interaction, HCI International</em>, Orlando, Florida, USA. <em>Lecture Notes in Computer Science</em>, Vol. 6766, pp. 440-449, Springer Berlin Heidelberg, 2011.
             </p>
@@ -484,7 +484,7 @@
 
             <p>
             Ravichander Vipperla, Maria Wolters, Kallirroi Georgila, and Steve Renals. 
-            <a href="vipperla_hci09.pdf">
+            <a href="vipperla_hcii09.pdf">
             Speech Input from Older Users in Smart Environments: Challenges and Perspectives.</a> 
             In <em>Proceedings of Universal Access in Human-Computer Interaction, HCI International</em>, San Diego, California, USA. <em>Lecture Notes in Computer Science</em>, Vol. 5615, pp. 117-126, Springer Berlin Heidelberg, 2009.
             </p>
