--- a/publications/publications.html
+++ b/publications/publications.html
@@ -507,7 +507,7 @@
             Oliver Lemon, Kallirroi Georgila, and James Henderson. 
             <a href="lemon_slt06.pdf">
             Evaluating Effectiveness and Portability of Reinforcement Learned Dialogue Strategies with Real Users: The TALK TownInfo Evaluation.</a> 
-            In <em>Proceedings of the IEEE/ACL Workshop on Spoken Language Technology</em>, pp. 178-181, Aruba, 2006.
+            In <em>Proceedings of the IEEE/ACL Workshop on Spoken Language Technology (SLT)</em>, pp. 178-181, Aruba, 2006.
             </p>
 
             <p>
