--- a/publications/publications.html
+++ b/publications/publications.html
@@ -549,7 +549,7 @@
             Kallirroi Georgila, Oliver Lemon, and James Henderson. 
             <a href="georgila_dialor05.pdf">
             Automatic Annotation of COMMUNICATOR Dialogue Data for Learning Dialogue Strategies and User Simulations.</a> 
-            In <em> Proceedings of the 9th Workshop on the Semantics and Pragmatics of Dialogue (SemDial:DIALOR)</em>, pp. 61-68, Nancy, France, 2005.
+            In <em> Proceedings of the 9th Workshop on the Semantics and Pragmatics of Dialogue (SemDial-DIALOR)</em>, pp. 61-68, Nancy, France, 2005.
             </p>
 
             <p>
