--- a/publications/publications.html
+++ b/publications/publications.html
@@ -556,7 +556,7 @@
             James Henderson, Oliver Lemon, and Kallirroi Georgila. 
             <a href="henderson_ijcai05.pdf">
             Hybrid Reinforcement/Supervised Learning for Dialogue Policies from COMMUNICATOR Data.</a> 
-            In <em> Proceedings of the IJCAI workshop on Knowledge and Reasoning in Practical Dialogue Systems</em>, pp. 68-75, Edinburgh, UK, 2005.
+            In <em> Proceedings of the IJCAI Workshop on Knowledge and Reasoning in Practical Dialogue Systems</em>, pp. 68-75, Edinburgh, UK, 2005.
             </p>
 
             <p>
