--- a/publications/publications.html
+++ b/publications/publications.html
@@ -24,7 +24,6 @@
 	        <a href="../index.html">Home</a>
 		<a href="../research/research.html">Research</a>
 		<a class="active" href="publications.html">Publications</a>
-		<a href="../projects/projects.html">Projects</a>
 		<a href="../professional-activities/professional-activities.html">Professional Activities</a>
 		<a href="../teaching/teaching.html">Teaching</a>
 	    </div>
@@ -493,7 +492,7 @@
             Kallirroi Georgila, Maria Wolters, and Johanna D. Moore. 
             <a href="georgila_aclhlt08.pdf">
             Simulating the Behaviour of Older versus Younger Users when Interacting with Spoken Dialogue Systems.</a> 
-            In <em>Proceedings of the 46th Annual Meeting of the Association for Computational Linguistics: Human Language Technologies (ACL-HLT), Short Papers</em>, pp. 49-52, Columbus, Ohio, USA, 2008.
+            In <em>Proceedings of the 46th Annual Meeting of the Association for Computational Linguistics - Human Language Technologies (ACL-HLT), Short Papers</em>, pp. 49-52, Columbus, Ohio, USA, 2008.
             </p>
 
             <p>
