--- a/teaching/cs544-fall2016/index.html
+++ b/teaching/cs544-fall2016/index.html
@@ -44,7 +44,7 @@ For the moment, TA office hours will be located in the SAL computer lab.
 <ul>
 <li><b>Final summative experience:</b> <a href="https://classes.usc.edu/term-20163/finals/">new university policy</a> means our course must have a final summative experience. This is only a minor change to how we plan to run the final project. As noted below, 10% of students' final grade will depend on a written report about projects from other groups. This report is the final summative experience, and will be submitted electronically.
 </li>
-<li><b>More details coming:</b> The structure of the class (syllabus, assignments, and project) is going to be similar to the one of <a href="http://nld.ict.usc.edu/cs544-fall2015/index.html">Fall 2015</a>. Please do not email us about the syllabus, assignments, and project. Once we have more information we will post it on this webpage.
+<li><b>More details coming:</b> The structure of the class (syllabus, assignments, and project) is going to be similar to the one of <a href=https://kgeorgila.github.io/teaching/cs544-fall2015/index.html target="_blank">Fall 2015</a>. Please do not email us about the syllabus, assignments, and project. Once we have more information we will post it on this webpage.
 </li>
 
 <li><b>Potential graders:</b> please do not email us directly. You should apply directly to the Computer Science Department. The hiring process typically happens in August.</li> 
@@ -77,7 +77,7 @@ AI material in this course.
 
 <p>
 The topics covered will be similar
-to <a href="http://nld.ict.usc.edu/cs544-fall2015/index.html">last
+to <a href=https://kgeorgila.github.io/teaching/cs544-fall2015/index.html target="_blank">last
 year</a> and we anticipate discussing speech processing (language
 modeling, speech recognition, speech synthesis), linguistic
 foundations (parts of speech, syntax, speech disfluencies, semantics,
@@ -86,8 +86,7 @@ retrieval, information extraction, machine translation, natural
 language generation, dialogue systems, automated grading). There is no
 required text book for the course; we will use lectures to cover the
 material.  Interested students can continue their study with other
-courses in USC's <a href="http://cl.usc.edu/courses.html">
-computational linguistics curriculum</a>.
+courses in USC's computational linguistics curriculum.
 </p>
 
 <h2>Resources</h2>
