--- a/teaching/cs544-spring2021/index.html
+++ b/teaching/cs544-spring2021/index.html
@@ -60,7 +60,7 @@ As we'll explore in the course, natural language is often ambiguous, and machine
 
 <p>
 The topics covered will be similar
-to <a href="https://nld.ict.usc.edu/cs544-fall2016/" target="_blank">CSCI 544 Fall 2016</a> including (but not limited to):
+to <a href="https://kgeorgila.github.io/teaching/cs544-fall2016/" target="_blank">CSCI 544 Fall 2016</a> including (but not limited to):
 <ul>
   <li>introduction to natural language processing</li>
   <li>corpora and annotation</li>
