--- a/teaching/cs644-spring2020/index.html
+++ b/teaching/cs644-spring2020/index.html
@@ -45,7 +45,7 @@ This course will provide an overview of natural language dialogue systems. Natur
 
 <p>
 The topics covered will be similar
-to <a href="http://projects.ict.usc.edu/nld/cs644f18/" target="_blank">CSCI 644 Fall 2018</a> including (but not limited to):
+to CSCI 644 Fall 2018 including (but not limited to):
 <ul>
   <li>overview of dialogue systems</li>
   <li>dialogue corpora and annotation</li>
