--- a/teaching/teaching.html
+++ b/teaching/teaching.html
@@ -33,19 +33,19 @@
 
 	    <h2>Teaching</h2>
             <p>
-            <a href="cs544-spring2021/index.html">CSCI 544: Applied Natural Language Processing. Spring 2021.</a>
+            <a href=cs544-spring2021/index.html target="_blank">CSCI 544: Applied Natural Language Processing. Spring 2021.</a>
             </p>
 
             <p>
-            <a href="cs644-spring2020/index.html">CSCI 644: Natural Language Dialogue Systems. Spring 2020.</a>
+            <a href=cs644-spring2020/index.html target="_blank">CSCI 644: Natural Language Dialogue Systems. Spring 2020.</a>
             </p>
 
             <p>
-            <a href="cs544-fall2016/index.html">CSCI 544: Applied Natural Language Processing. Fall 2016.</a>
+            <a href=cs544-fall2016/index.html target="_blank">CSCI 544: Applied Natural Language Processing. Fall 2016.</a>
             </p>
 
             <p>
-            <a href="cs544-fall2015/index.html">CSCI 544: Applied Natural Language Processing. Fall 2015.</a>
+            <a href=cs544-fall2015/index.html target="_blank">CSCI 544: Applied Natural Language Processing. Fall 2015.</a>
             </p>
 
             <br>
