--- a/teaching/cs544-fall2015/index.html
+++ b/teaching/cs544-fall2015/index.html
@@ -49,11 +49,10 @@ Currently, you should go to the SAL computer lab to find the TAs during their of
 <b>Course summary:</b>
 </p>
 <p>
-This course covers both fundamental and cutting-edge topics in Natural Language Processing (NLP) and provides students with hands-on experience in NLP applications. This is part of USC's <a href="http://cl.usc.edu/courses.html">curriculum in computational linguistics</a>.
+This course covers both fundamental and cutting-edge topics in Natural Language Processing (NLP) and provides students with hands-on experience in NLP applications. This is part of USC's curriculum in computational linguistics.
 The course
 will roughly follow the previous semester's course taught by Kenji
-Sagae
-(see <a href="http://appliednlp.bitbucket.org/">http://appliednlp.bitbucket.org</a>). There will be some differences in topics covered and assignments/projects. Like the previous course, there will be no exams. The grade for the class will be based only on assignments and a project. There will be no final exam and the class will finish December 4th at midnight (i.e., the last project/assignment will be due at that time or earlier).
+Sagae. There will be some differences in topics covered and assignments/projects. Like the previous course, there will be no exams. The grade for the class will be based only on assignments and a project. There will be no final exam and the class will finish December 4th at midnight (i.e., the last project/assignment will be due at that time or earlier).
 
 </p>
 
