--- a/professional-activities/professional-activities.html
+++ b/professional-activities/professional-activities.html
@@ -34,6 +34,10 @@
 	    <h2>Organizer and Senior Committee Roles, and Appointments</h2>
 
             <p>
+            Senior Area Chair (Dialogue and Interactive Systems), Meeting of the North American Chapter of the Association for Computational Linguistics (NAACL): 2022
+            </p>
+
+            <p>
             Program Co-Chair, Workshop on Semantics and Pragmatics of Dialogue (SemDial-PotsDial): 2021
             </p>
 
@@ -153,6 +157,10 @@
             IEEE Transactions on Multimedia
             </p>
 
+            <p>
+            IEEE Access
+            </p>
+
             <p>                
             IEEE Journal of Selected Topics in Signal Processing 
             </p>
@@ -198,7 +206,7 @@
 	    <h2>Conference and Workshop Program Committees and Reviewing</h2>
 
             <p>
-            Annual SIGdial Meeting on Discourse and Dialogue (SIGDIAL): 2021, 2020, 2019, 2018, 2017, 2016, 2015, 2014, 2013, 2012, 2011, 2010, 2009, 2008, 2007
+            Annual SIGdial Meeting on Discourse and Dialogue (SIGDIAL): 2022, 2021, 2020, 2019, 2018, 2017, 2016, 2015, 2014, 2013, 2012, 2011, 2010, 2009, 2008, 2007
             </p>
 
             <p>
@@ -226,7 +234,7 @@
             </p>
 
             <p>
-            Annual Conference of the International Speech Communication Association (INTERSPEECH): 2020, 2019, 2018, 2017
+            Annual Conference of the International Speech Communication Association (INTERSPEECH): 2022, 2020, 2019, 2018, 2017
             </p>
 
             <p>
@@ -246,7 +254,7 @@
             </p>
 
             <p>
-            International Conference on Language Resources and Evaluation (LREC): 2020, 2016, 2014, 2012, 2010, 2008
+            International Conference on Language Resources and Evaluation (LREC): 2022, 2020, 2016, 2014, 2012, 2010, 2008
             </p>
 
             <p>
@@ -308,7 +316,7 @@
             </p>
 
             <p>
-            Workshop on Semantics and Pragmatics of Dialogue (SemDial): 2020, 2019, 2017, 2016, 2015, 2014, 2013, 2012
+            Workshop on Semantics and Pragmatics of Dialogue (SemDial): 2022, 2020, 2019, 2017, 2016, 2015, 2014, 2013, 2012
             </p>
 
             <p>
@@ -316,7 +324,7 @@
             </p>
 
             <p>
-            Workshop on Resources and Processing of Linguistic and Extra-Linguistic Data from People with Various Forms of Cognitive/Psychiatric Impairments (RaPID): 2020, 2018, 2016
+            Workshop on Resources and Processing of Linguistic and Extra-Linguistic Data from People with Various Forms of Cognitive/Psychiatric Impairments (RaPID): 2022, 2020, 2018, 2016
             </p>
 
             <p>
