--- a/publications/publications.html
+++ b/publications/publications.html
@@ -141,8 +141,29 @@
 	    <h2>Conference and Workshop Papers</h2>
 
 	    <p> Divya Tadimeti, Kallirroi Georgila, and David Traum.
-            How Well Can an Agent Understand Different Accents?	      
-            In <em>the 5th Widening NLP (WiNLP) Workshop - Co-located with EMNLP</em>, Punta Cana, Dominican Republic, 2021. (to appear)
+            <a href="tadimeti_lrec22.pdf">
+	    Evaluation of Off-the-shelf Speech Recognizers on Different Accents in a Dialogue Domain.</a>
+            In <em>Proceedings of the 13th International Conference on Language Resources and Evaluation (LREC)</em>, pp. 6001-6008, Marseille, France, 2022. 
+            </p>
+	    
+	    <p> Deepthi Karkada, Ramesh Manuvinakurike, Maike Paetzel-Prusmann, and Kallirroi Georgila.
+            <a href="karkada_lrec22.pdf">
+	    Strategy-level Entrainment of Dialogue System Users in a Creative Visual Reference Resolution Task.</a>
+            In <em>Proceedings of the 13th International Conference on Language Resources and Evaluation (LREC)</em>, pp. 5768-5777, Marseille, France, 2022. 
+            </p>
+
+	    <p> Shikib Mehri, Jinho Choi, Luis Fernando D'Haro, Jan Deriu, Maxine Eskenazi, Milica Gasic, Kallirroi Georgila, Dilek Hakkani-Tur, Zekang Li, Verena Rieser, Samira Shaikh, David Traum, Yi-Ting Yeh, Zhou Yu, Yizhe Zhang, Chen Zhang.
+            <a href="mehri_aed22.pdf">
+	    Report from the NSF Future Directions Workshop on Automatic Evaluation of Dialog: Research Directions and Challenges.</a>
+            In <em>arXiv:2203.10012</em>, 2022. 
+            <a href="https://arxiv.org/pdf/2203.10012.pdf">
+	    arXiv Link.</a>  
+            </p>
+	    
+	    <p> Divya Tadimeti, Kallirroi Georgila, and David Traum.
+	    <a href="tadimeti_winlp21.pdf">
+            How Well Can an Agent Understand Different Accents?</a>	      
+            In <em>the 5th Widening NLP (WiNLP) Workshop - Co-located with EMNLP</em>, Punta Cana, Dominican Republic, 2021. 
 	    </p>  
 
 	    <p> Carla Gordon, Kallirroi Georgila, Volodymyr Yanov, and David Traum.
