--- a/professional-activities/professional-activities.html
+++ b/professional-activities/professional-activities.html
@@ -34,6 +34,14 @@
 	    <h2>Organizer and Senior Committee Roles, and Appointments</h2>
 
             <p>
+            Program Co-Chair, International Workshop on Spoken Dialogue Systems Technology (IWSDS): 2023
+            </p>
+
+            <p>
+            Area Chair (Dialogue and Interactive Systems), Conference on Empirical Methods in Natural Language Processing (EMNLP): 2022
+            </p>
+
+            <p>
             Senior Area Chair (Dialogue and Interactive Systems), Meeting of the North American Chapter of the Association for Computational Linguistics (NAACL): 2022
             </p>
 
@@ -246,7 +254,7 @@
             </p>
 
             <p>
-            International Joint Conference on Artificial Intelligence (IJCAI): 2020, 2016
+            International Joint Conference on Artificial Intelligence (IJCAI): 2022, 2020, 2016
             </p>
 
             <p>
@@ -282,7 +290,7 @@
             </p>
 
             <p>
-            IEEE Workshop on Spoken Language Technology (SLT): 2018, 2016, 2014, 2012, 2010
+            IEEE Workshop on Spoken Language Technology (SLT): 2022, 2018, 2016, 2014, 2012, 2010
             </p>
 
             <p>
