--- a/publications/publications.html
+++ b/publications/publications.html
@@ -117,7 +117,7 @@
             A Speech-Based Human-Computer Interaction System for Automating Directory Assistance Services.</a> 
             <em>International Journal of Speech Technology, Special Issue on Speech and Human Computer Interaction</em>, Vol. 6, No. 2, pp. 145-159, April 2003.
 	    <a href="https://link.springer.com/article/10.1023/A:1022338631326">
-	    Journal Link.</a?  
+	    Journal Link.</a>  
             </p>
 
             <p>
@@ -139,6 +139,13 @@
             <br>
 
 	    <h2>Conference and Workshop Papers</h2>
+
+	    <p>
+            Kallirroi Georgila.
+            <a href="georgila_dubdial22.pdf">
+            Comparing Regression Methods for Dialogue System Evaluation on a Richly Annotated Corpus.</a>
+            In <em>Proceedings of the 26th Workshop on the Semantics and Pragmatics of Dialogue (SemDial-DubDial)</em>, pp. 81-93, Dublin, Ireland, 2022. 
+	    </p>
 
 	    <p> Divya Tadimeti, Kallirroi Georgila, and David Traum.
             <a href="tadimeti_lrec22.pdf">
