--- a/professional-activities/professional-activities.html
+++ b/professional-activities/professional-activities.html
@@ -122,7 +122,7 @@
             </p>
 
             <p>
-            Member of the Advisory Committee for the Young Researchers Round Table on Spoken Dialogue Systems (YRRSDS): 2020, 2019, 2017, 2016, 2015, 2014, 2013, 2012, 2011
+            Member of the Advisory Committee for the Young Researchers Round Table on Spoken Dialogue Systems (YRRSDS): 2022, 2020, 2019, 2017, 2016, 2015, 2014, 2013, 2012, 2011
             </p>
 
             <br>
