new publication and service

--- a/professional-activities/professional-activities.html
+++ b/professional-activities/professional-activities.html
@@ -34,9 +34,25 @@
 	    <h2>Organizer and Senior Committee Roles, and Appointments</h2>
 
             <p>
+            Associate Editor of the Dialogue and Discourse journal: 2019-present
+            </p>
+
+	    <p>
             Program Co-Chair, International Workshop on Spoken Dialogue Systems Technology (IWSDS): 2023
             </p>
 
+            <p>
+            Area Chair (Dialogue and Interactive Systems), Annual Meeting of the Association for Computational Linguistics (ACL): 2023
+            </p>
+	    
+            <p>
+            Meta-reviewer, International Conference on Acoustics, Speech, and Signal Processing (ICASSP): 2023
+            </p>
+
+	    <p>
+	    Special Session Co-Organizer, Annual Conference of the International Speech Communication Association, Special Session on Speaking Styles and Interaction Styles (INTERSPEECH): 2023
+	    </p>  
+	    
             <p>
             Area Chair (Dialogue and Interactive Systems), Conference on Empirical Methods in Natural Language Processing (EMNLP): 2022
             </p>
@@ -63,10 +79,6 @@
 
             <p>
             Area Chair (Dialogue and Interactive Systems), Annual Meeting of the Association for Computational Linguistics (ACL): 2020
-            </p>
-
-            <p>
-            Associate Editor of the Dialogue and Discourse journal: 2019-present
             </p>
 
             <p>
@@ -336,7 +348,7 @@
             </p>
 
             <p>
-            Workshop on the 9th Dialogue System Technology Challenge (DSTC9): 2021
+            Workshop on the Dialogue System Technology Challenge (DSTC): 2023, 2021
             </p>
 
             <p>
