--- a/publications/publications.html
+++ b/publications/publications.html
@@ -140,8 +140,13 @@
 
 	    <h2>Conference and Workshop Papers</h2>
 
-	    <p>
-            Kallirroi Georgila.
+	    <p> Kallirroi Georgila.
+	    <a href="georgila_aiaic23.pdf">
+            Considerations for Child Speech Synthesis for Dialogue Systems.</a>	      
+            In <em>the Language-Based AI Agent Interaction with Children Workshop (AIAIC) – Co-located with IWSDS</em>, Los Angeles, California, USA, 2023. 
+	    </p>  
+
+	    <p> Kallirroi Georgila.
             <a href="georgila_dubdial22.pdf">
             Comparing Regression Methods for Dialogue System Evaluation on a Richly Annotated Corpus.</a>
             In <em>Proceedings of the 26th Workshop on the Semantics and Pragmatics of Dialogue (SemDial-DubDial)</em>, pp. 81-93, Dublin, Ireland, 2022. 
