--- a/publications/publications.html
+++ b/publications/publications.html
@@ -143,7 +143,7 @@
 	    <p> Kallirroi Georgila.
 	    <a href="georgila_aiaic23.pdf">
             Considerations for Child Speech Synthesis for Dialogue Systems.</a>	      
-            In <em>the Language-Based AI Agent Interaction with Children Workshop (AIAIC) – Co-located with IWSDS</em>, Los Angeles, California, USA, 2023. 
+            In <em>the Language-Based AI Agent Interaction with Children Workshop (AIAIC) - Co-located with IWSDS</em>, Los Angeles, California, USA, 2023. 
 	    </p>  
 
 	    <p> Kallirroi Georgila.
