--- a/publications/publications.html
+++ b/publications/publications.html
@@ -140,6 +140,12 @@
 
 	    <h2>Conference and Workshop Papers</h2>
 
+	    <p> Kallirroi Georgila and David Traum.
+            <a href="georgila_iwsds24.pdf">
+	    Evaluation of Off-the-shelf Whisper Models for Speech Recognition Across Diverse Dialogue Domains.</a>	      
+            In <em>Proceedings of the 14th International Workshop on Spoken Dialogue Systems Technology (IWSDS)</em>, Sapporo, Japan, 2024. <b>****best paper nomination****</b> 
+	    </p>  
+
 	    <p> Kallirroi Georgila.
 	    <a href="georgila_aiaic23.pdf">
             Considerations for Child Speech Synthesis for Dialogue Systems.</a>	      
