--- a/professional-activities/professional-activities.html
+++ b/professional-activities/professional-activities.html
@@ -37,6 +37,22 @@
             Associate Editor of the Dialogue and Discourse journal: 2019-present
             </p>
 
+            <p>
+            Senior Area Chair (Dialogue and Interactive Systems), Meeting of the North American Chapter of the Association for Computational Linguistics (NAACL): 2024
+            </p>
+
+            <p>
+            Area Chair (Dialogue and Interactive Systems), Conference of the European Chapter of the Association for Computational Linguistics (EACL): 2024
+            </p>
+ 
+            <p>
+            Area Chair (Dialogue, Conversational Systems, Chatbots, Human-Robot Interaction), Joint International Conference on Computational Linguistics, Language Resources and Evaluation (LREC-COLING): 2024
+            </p>
+ 
+            <p>
+            Meta-reviewer, International Conference on Acoustics, Speech, and Signal Processing (ICASSP): 2024
+            </p>
+
 	    <p>
             Program Co-Chair, International Workshop on Spoken Dialogue Systems Technology (IWSDS): 2023
             </p>
@@ -134,7 +150,7 @@
             </p>
 
             <p>
-            Member of the Advisory Committee for the Young Researchers Round Table on Spoken Dialogue Systems (YRRSDS): 2022, 2020, 2019, 2017, 2016, 2015, 2014, 2013, 2012, 2011
+            Member of the Advisory Committee for the Young Researchers Round Table on Spoken Dialogue Systems (YRRSDS): 2023, 2022, 2020, 2019, 2017, 2016, 2015, 2014, 2013, 2012, 2011
             </p>
 
             <br>
@@ -218,6 +234,14 @@
             </p>
 
             <p>
+            Behavior Research Methods 
+            </p>
+
+            <p>
+            Neural Networks 
+            </p>
+
+            <p>
             Grant panelist for the National Science Foundation, USA (served on 3 reviewing panels)
             <p>
 
@@ -226,7 +250,7 @@
 	    <h2>Conference and Workshop Program Committees and Reviewing</h2>
 
             <p>
-            Annual SIGdial Meeting on Discourse and Dialogue (SIGDIAL): 2022, 2021, 2020, 2019, 2018, 2017, 2016, 2015, 2014, 2013, 2012, 2011, 2010, 2009, 2008, 2007
+            Annual SIGdial Meeting on Discourse and Dialogue (SIGDIAL): 2023, 2022, 2021, 2020, 2019, 2018, 2017, 2016, 2015, 2014, 2013, 2012, 2011, 2010, 2009, 2008, 2007
             </p>
 
             <p>
@@ -254,7 +278,7 @@
             </p>
 
             <p>
-            Annual Conference of the International Speech Communication Association (INTERSPEECH): 2022, 2020, 2019, 2018, 2017
+            Annual Conference of the International Speech Communication Association (INTERSPEECH): 2023, 2022, 2020, 2019, 2018, 2017
             </p>
 
             <p>
@@ -310,7 +334,7 @@
             </p>
 
             <p>
-            International Workshop on Spoken Dialogue Systems Technology (IWSDS): 2021, 2020, 2019, 2018, 2017
+            International Workshop on Spoken Dialogue Systems Technology (IWSDS): 2024, 2021, 2020, 2019, 2018, 2017
             </p>
 
             <p>
@@ -336,7 +360,7 @@
             </p>
 
             <p>
-            Workshop on Semantics and Pragmatics of Dialogue (SemDial): 2022, 2020, 2019, 2017, 2016, 2015, 2014, 2013, 2012
+            Workshop on Semantics and Pragmatics of Dialogue (SemDial): 2023, 2022, 2020, 2019, 2017, 2016, 2015, 2014, 2013, 2012
             </p>
 
             <p>
